# StockTracker.API

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  alembic.ini  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
alembic/: env.py
alembic/versions/: 20260326162000_add_Role_Permission_RolePermission.py  20260326163000_add_User_Tenant_UserRole.py  20260427191500_add_Industry.py  20260427213500_add_stock_and_stock_industry.py  20260427213600_add_market_index_and_index_composition.py  20260429062000_add_company_profile.py  20260429062100_add_company_shareholder.py  20260429062200_add_company_officer.py  20260429062300_add_company_affiliation.py  20260429062400_add_company_event.py  20260429062500_add_company_news.py  20260502170000_add_stock_price_history.py  20260502170100_add_stock_intraday.py
app/: AGENTS.md  main.py
app/api/v1/: router.py
app/common/: base_consumer.py  base_entity.py  base_mapper.py  base_model.py  base_repository.py  base_schema.py  base_service.py  cache.py  cache_version_keys.py  consumer_registry.py  current_user.py  enum.py  pagination.py
app/common/auth/: auth_access.py  context_token_codec.py  identity_token_codec.py  keycloak_jwt_decoder.py  permission_codes.py  principals.py
app/core/: config.py  database.py  exceptions.py  logger.py  rabbitmq.py  redis.py  security.py  transaction_manager.py
app/exception/: exception.py  handler.py
app/i18n/: catalog.py  locale.py
app/i18n/errors/: en.json  vi.json
app/middleware/: auth_context.py  request_context.py
app/modules/: models.py
app/modules/account/: account_dependency.py
app/modules/company_affiliation/: company_affiliation_dependency.py  company_affiliation_query_dependency.py
app/modules/company_event/: company_event_dependency.py  company_event_query_dependency.py
app/modules/company_news/: company_news_dependency.py  company_news_query_dependency.py
app/modules/company_officer/: company_officer_dependency.py  company_officer_query_dependency.py
app/modules/company_profile/: company_profile_dependency.py  company_profile_query_dependency.py
app/modules/company_shareholder/: company_shareholder_dependency.py  company_shareholder_query_dependency.py
app/modules/industry/: industry_dependency.py  (+1 more)
src/: app.module.ts  main.ts
src/config/: config.module.ts  configuration.loader.ts  configuration.ts  validation.ts
tests/: AGENTS.md  conftest.py  main.py
tests/integration/: conftest.py  test_account_endpoints.py  test_auth_middleware.py  test_company_affiliation_endpoints.py  test_company_event_endpoints.py  test_company_news_endpoints.py  test_company_officer_endpoints.py  test_company_profile_endpoints.py  test_company_shareholder_endpoints.py  test_error_handling.py  test_health.py  test_industry_endpoints.py  test_market_index_endpoints.py  test_role_endpoints.py  test_stock_endpoints.py  test_stock_intraday_endpoints.py  test_stock_price_history_endpoints.py  test_tenant_endpoints.py  test_user_endpoints.py
tests/support/: factories.py  fakes.py
tests/unit/: test_base_schema.py  test_cache_version_keys.py  test_context_token_codec.py  test_enums.py  test_exceptions.py  test_i18n_catalog.py  test_middleware.py  test_password_validation.py  test_permission_bitmap.py  test_principals.py  test_schema_mapper.py
(+239 files in other folders)
